--- a/CryptoTransactionTracker.csproj
+++ b/CryptoTransactionTracker.csproj
@@ -6,10 +6,17 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Company>CryptoTransactionTracker</Company>
+    <Product>CryptoTransactionTracker</Product>
+    <AssemblyTitle>CryptoTransactionTracker</AssemblyTitle>
+    <AssemblyConfiguration>Debug</AssemblyConfiguration>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
